# hp-rag

./: .env.example  .env_example  .gitignore  AGENTS.md  README.md  Specs.md  document-browser-feature.md  executive_summary.md  pyproject.toml  server-feature.md  ui-server-communication-specs.md
configs/: README.md
configs/datasets/: beir_fiqa.yaml  hotpotqa.yaml  miracl_en.yaml
configs/experiments/: contracts_llm_vs_vector.yaml  fakes_smoke.yaml  hotpotqa_llm_vs_vector.yaml  miracl_en_hp_rag.yaml
configs/prompts/: contracts_answer_prompt.txt
data/: README.md
data/contracts/: EPA-VAC-OCT-2025-005_Equipment_Purchase_Agreement_Industrial_Sewing_Lines.md  EPA-VAC-OCT-2025-005_queries.json  FPA-ORION-SABOR-2025-004_UK_Framework_Procurement_Agreement_Packaged_Foods.md  FPA-ORION-SABOR-2025-004_queries.json  GDA-NMD-EMD-2025-002_EMEA_Distribution_Agreement_Medical_Devices.md  GDA-NMD-EMD-2025-002_queries.json  IMSA-AR-NOVA-2025-001_queries.json  (+5 more)
scripts/: build_toc.py  clean_ingestion_db.py  prepare_contract_questions.py  report.py  run_contract_smoke.py  run_evals.py  run_workflow.py  test_ingestion.py
src/: __init__.py
tests/: test_adapters.py  test_answer_similarity.py  test_document_store.py  test_eval_run.py  test_hyperlink_retriever.py  test_ingestion_pipeline.py  test_markdown_toc_builder.py  test_models.py  test_paragraph_chunker.py  test_pdf_toc_builder.py  test_query_runner.py  test_server_instrumentation.py  test_server_stream.py  test_sqlite_store.py  test_tenant_api.py  test_tenant_extractor.py  test_vector_retriever.py  test_workflow.py
(+60 files in other folders)
